# zmqls

./: .gitignore  CMakeLists.txt  LICENSE  README.md  start.sh
client/: CMakeLists.txt  client.cpp
cmake/modules/: FindZeroMQ.cmake
include/zmqls/: cl_args.hpp  client.hpp  json.hpp  server.hpp  stream.hpp  zmqls.hpp
lib/: CMakeLists.txt  cl_args.cpp  zmqls.cpp
server/: CMakeLists.txt  server.cpp
